cod-tools (/branches/feature/saulius-polymer-basis-determination)

  * Added:
    - the COD::Algebra::GaussJordanBigRat module;
    - COD::Algebra::GaussJordan:
      - the gj_elimination_non_zero_elements() subroutine.
  * Fixed:
    - cif_molecule:
      - the polymer basis determination logic.

cod-tools (unreleased)

  * Added:
    - COD::CIF::DDL:
      - the get_category_name_from_local_data_name() subroutine.
    - COD::CIF::DDL::DDL1:
      - the classify_dic_blocks() subroutine;
      - the get_data_name() subroutine;
      - the get_data_names() subroutine;
      - the convert_pseudo_data_name_to_category_name() subroutine.
    - cif_validate:
      - the '--merge-ddl1-dictionaries' and '--no-merge-ddl1-dictionaries'
        options.
    - COD::CIF::Tags::Excluded:
      - several more data names to the exclusion list.
  * Changed:
    - cif_validate:
      - updated the dictionary handling logic to merge all DDL1
        dictionaries into a single virtual dictionary;
      - updated validation messages involving enumeration values
        to contain single quotes around each of the reported enumeration
        values.
    - COD::CIF::DDL::Ranges:
      - updated the range_to_string_char() subroutine to add single
        quotes around the range limits.
    - molcif2sdf:
      - replaced call to 'babel' with 'obabel' to be compatible with
        all versions of Open Babel.
  * Fixed:
    - COD::CIF::Data::Check:
      - fixed a typo in a warning message generated by the
        check_formula_sum_syntax() subroutine.
    - corrected a typo in the 'cif_CODify', 'cif_cod_deposit', 'codcif2sdf',
      'molcif2sdf' and 'sdf_add_cod_data' scripts.

cod-tools (2.10)

  * Added:
    - cif_validate:
      - a check that reports looped lists containing data items from more
        than one dictionary category;
      - a check that reports unique loop key violations;
      - a check that reports missing mandatory looped list data items.
    - COD::CIF::DDL::DDL1: