@@ -14,9 +14,11 @@ use warnings;
 require Exporter;
 our @ISA = qw( Exporter );
 our @EXPORT_OK = qw(
-    backward_elimination
-    forward_elimination
+    gj_elimination
     gj_elimination_non_zero_elements
+    forward_elimination
+    back_substitution
+    backward_elimination
 );
 
 # A default factor to multiply machine espsilon to get the value
