@@ -1,9 +1,14 @@
 cod-tools (/branches/feature/saulius-polymer-basis-determination)
 
   * Added:
-    - the COD::Algebra::GaussJordanBigRat module;
     - COD::Algebra::GaussJordan:
-      - the gj_elimination_non_zero_elements() subroutine.
+      - the gj_elimination_non_zero_elements() subroutine;
+      - the gj_elimination() subroutine;
+      - back_substitution() – a correclty named routine.
+    - the COD::Algebra::GaussJordanBigRat module;
+      - A drop-in replacement for COD::Algebra::GaussJordan (same
+	exports), using BigRat rational number arithmetic instead of the
+	floating point;
   * Fixed:
     - cif_molecule:
       - the polymer basis determination logic.
